--- a/index.html
+++ b/index.html
@@ -105,12 +105,15 @@
             <p>技术早报编辑器是由腾云先锋成员（<b>TDP-若海</b>）所编写的一款微信群技术早报消息生成器，为早报发布人员提供了便捷的早报内容生成，省去了大量的文章内容摘取时间。</p>
 　　    </div>
         <div class="panel-footer">
-            <a href="https://editor.tdp.plus/editor/index.html" class="panel-footer-btn">打开编辑器</a>
+            <a href="https://editor.tdp.plus/" class="panel-footer-btn">打开编辑器</a>
             <a href="https://github.com/tdp-resouce/paper-editor" class="panel-footer-btn" target="_blank">编辑器源码</a>
         </div>
     </div>
     <div class="panel">
         <h3 class="panel-header">最新活动</h3>
+        <div class="panel-footer">
+            <a href="https://cloud.tencent.com/developer/article/1963773" class="panel-footer-btn" target="_blank">【进行中】#我与腾讯云不得不说的故事#有奖互动</a>
+        </div>
         <div class="panel-footer">
             <a href="https://cloud.tencent.com/developer/article/1948608" class="panel-footer-btn" target="_blank">【进行中】TDP·腾讯云产品“用户实践”征文活动</a>
         </div>
