微博活动已结束

--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
     <div class="panel">
         <h3 class="panel-header">最新活动</h3>
         <div class="panel-footer">
-            <a href="https://cloud.tencent.com/developer/article/1963773" class="panel-footer-btn" target="_blank">【进行中】#我与腾讯云不得不说的故事#有奖互动</a>
+            <a href="https://cloud.tencent.com/developer/article/1963773" class="panel-footer-btn" target="_blank">【已结束】#我与腾讯云不得不说的故事#有奖互动</a>
         </div>
         <div class="panel-footer">
-            <a href="https://cloud.tencent.com/developer/article/1948608" class="panel-footer-btn" target="_blank">【进行中】TDP·腾讯云产品“用户实践”征文活动</a>
+            <a href="https://cloud.tencent.com/developer/article/1948608" class="panel-footer-btn" target="_blank">【已结束】TDP·腾讯云产品“用户实践”征文活动</a>
         </div>
         <div class="panel-footer">
             <a href="https://cloud.tencent.com/developer/article/1934619" class="panel-footer-btn" target="_blank">【已结束】TDP年末盛典活动，三大篇章共赴新春！</a>
