增加活动《【开箱吧腾讯云——第二期对象存储COS】有奖互动来啦！》

--- a/index.html
+++ b/index.html
@@ -112,7 +112,10 @@
     <div class="panel">
         <h3 class="panel-header">最新活动</h3>
         <div class="panel-footer">
-            <a href="https://cloud.tencent.com/developer/article/1993405" class="panel-footer-btn" target="_blank">【进行中】【开箱吧腾讯云——第一期lighthouse】有奖互动来啦！</a>
+            <a href="https://cloud.tencent.com/developer/article/2007510" class="panel-footer-btn" target="_blank">【进行中】【开箱吧腾讯云——第二期对象存储COS】有奖互动来啦！</a>
+        </div>
+        <div class="panel-footer">
+            <a href="https://cloud.tencent.com/developer/article/1993405" class="panel-footer-btn" target="_blank">【已结束】【开箱吧腾讯云——第一期lighthouse】有奖互动来啦！</a>
         </div>
         <div class="panel-footer">
             <a href="https://cloud.tencent.com/developer/article/1963773" class="panel-footer-btn" target="_blank">【已结束】#我与腾讯云不得不说的故事#有奖互动</a>
