更新活动状态

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <div class="panel">
         <h3 class="panel-header">最新活动</h3>
         <div class="panel-footer">
-            <a href="https://cloud.tencent.com/developer/article/2014209" class="panel-footer-btn" target="_blank">【进行中】腾云先锋第四期招募令已出，TDP男孩女孩们 速来~~</a>
+            <a href="https://cloud.tencent.com/developer/article/2014209" class="panel-footer-btn" target="_blank">【已结束】腾云先锋第四期招募令已出，TDP男孩女孩们 速来~~</a>
         </div>
         <div class="panel-footer">
             <a href="https://cloud.tencent.com/developer/article/2007510" class="panel-footer-btn" target="_blank">【已结束】【开箱吧腾讯云——第二期对象存储COS】有奖互动来啦！</a>
