【TDP加码福利】文档有奖反馈活动

--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
     <div class="panel">
         <h3 class="panel-header">最新活动</h3>
         <div class="panel-footer">
+            <a href="https://cloud.tencent.com/developer/article/2042123" class="panel-footer-btn" target="_blank">【进行中】【TDP加码福利】文档有奖反馈活动</a>
+        </div>
+        <div class="panel-footer">
             <a href="https://cloud.tencent.com/developer/article/2032462" class="panel-footer-btn" target="_blank">【已结束】Happy Birthday ~~TDP周年庆活动来袭~~</a>
         </div>
         <div class="panel-footer">
