云+社区更名为开发者社区

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <a href="https://cloud.tencent.com/developer/article/1855195" class="panel-footer-btn" target="_blank">加入我们</a>
         	<a href="https://cloud.tencent.com/voc" class="panel-footer-btn" target="_blank">用户之声</a>
         	<a href="https://cloud.tencent.com/online-service?from=tdp" class="panel-footer-btn" target="_blank">智能客服</a>
-        	<a href="https://cloud.tencent.com/developer/user/8879646" class="panel-footer-btn" target="_blank">云+社区</a>
+        	<a href="https://cloud.tencent.com/developer/user/8879646" class="panel-footer-btn" target="_blank">开发者社区</a>
         </div>
     </div>
     <div class="panel">
