--- a/index.html
+++ b/index.html
@@ -6,81 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>腾云先锋</title>
-    <style>
-        body {
-            padding: 0;
-            margin: 0;
-            font-size: 16px;
-            line-height: 1.2em;
-        }
-        p {
-            margin: 0;
-            padding: 0;
-            line-height: 1.6em;
-            margin-bottom: 10px;
-            text-indent: 2em;
-        }
-        a {
-            color: #3F51B5;
-            text-decoration: none;
-        }
-        .body-background {
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-color: #fff;
-            background-image: url(//ll00.cn/image/bingBackground);
-            background-position: center center;
-            position: fixed;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -1;
-        }
-        .container {
-            max-width: 750px;
-            margin: 0 auto;
-            padding: 0 15px;
-        }
-        .panel {
-            background-color: #ffffffdb;
-            margin: 15px 0;
-            border: 1px solid #bbb;
-            border-radius: 5px;
-        }
-        .panel-header {
-            margin: 0;
-            font-size: 1.2em;
-            font-weight: initial;
-            text-align: left;
-            padding: 10px 15px;
-            text-align: center;
-            border-bottom: 1px solid #bbb;
-        }
-        .panel-body {
-            padding: 10px 15px;
-        }
-        .panel-footer {
-            border-top: 1px solid #bbb;
-            display: flex;
-        }
-        .panel-footer-btn {
-		    flex: 1;
-		    text-align: center;
-		    padding: 10px 15px;
-		    border-right: 1px solid #bbb
-		}
-		.panel-footer-btn:last-child {
-		    border: 0;
-		}
-        .footer {
-            padding: 10px 15px;
-            background-color: #ffffffba;
-            text-align: center;
-            border-radius: 5px;
-            border: 1px solid #bbb;
-            margin-bottom: 15px;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="index.css" />
     <!-- <link rel="stylesheet" type="text/css" href="tencent-w3.css" /> -->
 </head>
 <body>
