--- a/index.html
+++ b/index.html
@@ -5,71 +5,75 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>腾云先锋</title>
-    <link rel="stylesheet" type="text/css" href="index.css" />
+    <title>腾云先锋 | TDP</title>
+    <link rel="stylesheet" type="text/css" href="./css/index.css" />
+    <link href="./css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fastly.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+    
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="./js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/json2html/2.2.2/json2html.min.js"></script>
+    <script src="./js/index.js"></script>
     <!-- <link rel="stylesheet" type="text/css" href="tencent-w3.css" /> -->
 </head>
 <body>
 <div class="body-background"></div>
 <div class="container">
-    <div class="panel">
-        <h3 class="panel-header">腾云先锋</h3>
-        <div class="panel-body">
-            <p>腾云先锋（TDP，Tencent Cloud Developer Pioneer）是腾讯云GTS官方组建并运营的技术开发者群体。</p>
+    <div class="card">
+        <div class="card-body">
+            <div class="text-center"><img src="https://editor.tdp.plus/assets/images/tdp-logo.png"
+                class="tdp-badge"></div>
+            <hr>
+        <p>腾云先锋（TDP，Tencent Cloud Developer Pioneer）是腾讯云GTS官方组建并运营的技术开发者群体。</p>
             <p>这里有最专业的开发者&客户，能与产品人员亲密接触，专有的问题&需求反馈渠道，有一群志同道合的兄弟姐妹。</p>
-　　    </div>
-        <div class="panel-footer">
-            <a href="https://cloud.tencent.com/developer/article/1855195" class="panel-footer-btn" target="_blank">加入我们</a>
-        	<a href="https://cloud.tencent.com/voc" class="panel-footer-btn" target="_blank">用户之声</a>
-        	<a href="https://cloud.tencent.com/online-service?from=tdp" class="panel-footer-btn" target="_blank">智能客服</a>
-        	<a href="https://cloud.tencent.com/developer/user/8879646" class="panel-footer-btn" target="_blank">开发者社区</a>
+            <hr>
+            <div class="btn-footer">
+            <div class="row text-center">
+            <a href="https://cloud.tencent.com/developer/article/1855195" class="col" target="_blank">
+                <img src="icons/team.svg" alt="" class="firstPanelIcons">
+                <br>加入我们</a>
+        	<a href="https://cloud.tencent.com/voc" class="col" target="_blank">
+                <img src="icons/voc.svg" alt="" class="firstPanelIcons">
+                <br>用户之声</a>
+        	<a href="https://cloud.tencent.com/online-service?from=tdp" class="col" target="_blank">
+                <img src="icons/service.svg" alt="" class="firstPanelIcons">
+                <br>智能客服</a>
+        	<a href="https://cloud.tencent.com/developer/user/8879646" class="col" target="_blank">
+                <img src="icons/dev.svg" alt="" class="firstPanelIcons">
+                <br>开发者社区</a>
+            </div>
         </div>
     </div>
-    <div class="panel">
-        <h3 class="panel-header">技术早报编辑器</h3>
-        <div class="panel-body">
+        </div>
+<br>
+
+    <div class="card">
+        <div class="card-header lead">
+            <img src="icons/editor.svg" class="tdp-icons">技术早报编辑器</div>
+        <div class="card-body">
             <p>技术早报编辑器是由腾云先锋成员（<b>TDP-若海</b>）所编写的一款微信群技术早报消息生成器，为早报发布人员提供了便捷的早报内容生成，省去了大量的文章内容摘取时间。</p>
-　　    </div>
-        <div class="panel-footer">
-            <a href="https://editor.tdp.plus/" class="panel-footer-btn">打开编辑器</a>
-            <a href="https://github.com/tdp-resouce/paper-editor" class="panel-footer-btn" target="_blank">编辑器源码</a>
+　　    <hr>
+        <div class="btn-footer">
+            <a href="https://editor.tdp.plus/" class="btn btn-primary">打开编辑器</a>
+            <a href="https://github.com/tdp-resouce/paper-editor" class="text-black offset-2 align-self-center" target="_blank">
+                <img src="icons/github.svg" class="tdp-icons" alt="">源码</a>
         </div>
     </div>
-    <div class="panel">
-        <h3 class="panel-header">最新活动</h3>
-        <div class="panel-footer">
-            <a href="https://cloud.tencent.com/developer/article/2043794" class="panel-footer-btn" target="_blank">【进行中】DNS解析保姆级攻略【开箱吧腾讯云】有奖互动等你来！</a>
+</div>
+
+<br>
+    <div class="card">
+        <div class="card-header lead"><i class="bi bi-broadcast-pin text-primary"></i> 最新活动</div>
+        <div class="card-body">
+        <ul class="list-group" id="activities">
+
+<!--     <li class="list-group-item">
+            <span class="badge text-bg-${statusIcon}">${status}</span>
+            <a href="${link}" target="_blank"> ${title}</a>
+            </li> -->
+          </ul>
         </div>
-        <div class="panel-footer">
-            <a href="https://cloud.tencent.com/developer/article/2042123" class="panel-footer-btn" target="_blank">【进行中】【TDP加码福利】文档有奖反馈活动</a>
-        </div>
-        <div class="panel-footer">
-            <a href="https://cloud.tencent.com/developer/article/2032462" class="panel-footer-btn" target="_blank">【已结束】Happy Birthday ~~TDP周年庆活动来袭~~</a>
-        </div>
-        <div class="panel-footer">
-            <a href="https://cloud.tencent.com/developer/article/2014209" class="panel-footer-btn" target="_blank">【已结束】腾云先锋第四期招募令已出，TDP男孩女孩们 速来~~</a>
-        </div>
-        <div class="panel-footer">
-            <a href="https://cloud.tencent.com/developer/article/2007510" class="panel-footer-btn" target="_blank">【已结束】【开箱吧腾讯云——第二期对象存储COS】有奖互动来啦！</a>
-        </div>
-        <div class="panel-footer">
-            <a href="https://cloud.tencent.com/developer/article/1993405" class="panel-footer-btn" target="_blank">【已结束】【开箱吧腾讯云——第一期lighthouse】有奖互动来啦！</a>
-        </div>
-        <div class="panel-footer">
-            <a href="https://cloud.tencent.com/developer/article/1963773" class="panel-footer-btn" target="_blank">【已结束】#我与腾讯云不得不说的故事#有奖互动</a>
-        </div>
-        <div class="panel-footer">
-            <a href="https://cloud.tencent.com/developer/article/1948608" class="panel-footer-btn" target="_blank">【已结束】TDP·腾讯云产品“用户实践”征文活动</a>
-        </div>
-        <div class="panel-footer">
-            <a href="https://cloud.tencent.com/developer/article/1934619" class="panel-footer-btn" target="_blank">【已结束】TDP年末盛典活动，三大篇章共赴新春！</a>
-        </div>
-        <div class="panel-footer">
-            <a href="/20211223/" class="panel-footer-btn" target="_blank">【已结束】双旦“协旧迎新”，组队赢取好礼！</a>
-        </div>
-        <div class="panel-footer">
-            <a href="/top.php" class="panel-footer-btn" target="_blank">【已结束】腾讯云智能客服智囊团活动·第一期</a>
-        </div>
+    
     </div>
     <div id="aplayer"></div>
     <footer class="footer">
@@ -78,3 +82,8 @@
 </div>
 </body>
 </html>
+<script>
+    $(document).ready(()=>{
+        getActivities()
+    })
+</script>
