--- a/index.html
+++ b/index.html
@@ -49,21 +49,21 @@
 
     <div class="card">
         <div class="card-header lead">
-            <img src="icons/editor.svg" class="tdp-icons">技术早报编辑器</div>
+            <i class="bi bi-pencil-square text-primary"> </i>技术早报编辑器</div>
         <div class="card-body">
             <p>技术早报编辑器是由腾云先锋成员（<b>TDP-若海</b>）所编写的一款微信群技术早报消息生成器，为早报发布人员提供了便捷的早报内容生成，省去了大量的文章内容摘取时间。</p>
 　　    <hr>
         <div class="btn-footer">
             <a href="https://editor.tdp.plus/" class="btn btn-primary">打开编辑器</a>
-            <a href="https://github.com/tdp-resouce/paper-editor" class="text-black offset-2 align-self-center" target="_blank">
-                <img src="icons/github.svg" class="tdp-icons" alt="">源码</a>
+            <a href="https://github.com/tdp-resouce/paper-editor" class="offset-2 align-self-center btn btn-primary" target="_blank">
+                <i class="bi bi-github text-white"> </i>源码</a>
         </div>
     </div>
 </div>
 
 <br>
     <div class="card">
-        <div class="card-header lead"><i class="bi bi-broadcast-pin text-primary"></i> 最新活动</div>
+        <div class="card-header lead"><i class="bi bi-flag-fill text-primary"></i> 最新活动</div>
         <div class="card-body">
         <ul class="list-group" id="activities">
 
