--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="panel">
         <h3 class="panel-header">最新活动</h3>
         <div class="panel-footer">
-            <a href="https://cloud.tencent.com/developer/article/2043794" class="panel-footer-btn" target="_blank">【进行中】DNS解析保姆级攻略【开箱吧腾讯云】有奖互动等你来！</a>
+            <a href="https://cloud.tencent.com/developer/article/2043794" class="panel-footer-btn" target="_blank">【已结束】DNS解析保姆级攻略【开箱吧腾讯云】有奖互动等你来！</a>
         </div>
         <div class="panel-footer">
             <a href="https://cloud.tencent.com/developer/article/2042123" class="panel-footer-btn" target="_blank">【进行中】【TDP加码福利】文档有奖反馈活动</a>
