--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
             <p>腾云先锋（TDP，Tencent Cloud Developer Pioneer）是腾讯云GTS官方组建并运营的技术开发者群体。</p>
             <p>这里有最专业的开发者&客户，能与产品人员亲密接触，专有的问题&需求反馈渠道，有一群志同道合的兄弟姐妹。</p>
 　　    </div>
+        <!--
         <div class="panel-footer">
             <a href="https://cloud.tencent.com/developer/article/1855195" class="panel-footer-btn" target="_blank">加入我们</a>
         	<a href="https://cloud.tencent.com/voc" class="panel-footer-btn" target="_blank">用户之声</a>
         	<a href="https://cloud.tencent.com/online-service?from=tdp" class="panel-footer-btn" target="_blank">智能客服</a>
         	<a href="https://cloud.tencent.com/developer/user/8879646" class="panel-footer-btn" target="_blank">开发者社区</a>
         </div>
+        -->
     </div>
     <div class="panel">
         <h3 class="panel-header">技术早报编辑器</h3>
@@ -36,9 +38,35 @@
         </div>
     </div>
     <div class="panel">
+        <h3 class="panel-header">云决定要走 风怎么挽留</h3>
+        <div class="panel-body" style="text-align: center;">
+            <p><small>有感 TDP 风云变幻，奉上打油诗一首</small></p>
+
+            <p><small>创作：若海、King</small></p>
+
+            <p>风吹黄沙，浪打潮岸</p>
+            <p>止不住降本洪流的冲刷</p>
+            <p>那TDP，只在心间</p>
+            <p>留下些许模糊的印迹</p>
+
+            <p>心还在云端，节点已漂流</p>
+            <p>动念之间，新TDP姗姗走来</p>
+            <p>拨动沉寂的心弦</p>
+            <p>唤醒尘封的意念</p>
+
+            <p>对！找小蜜蜂</p>
+
+            <p>找啊找，找啊找……</p>
+            <p>却发现，原来海焦上的我</p>
+            <p>期待的泪水不能咸到深海中的你</p>
+            <p>就像我的 git，等来的却是你的 <code>rm -rf /TDP</code></p>
+　　    </div>
+    </div>
+    <!--
+    <div class="panel">
         <h3 class="panel-header">最新活动</h3>
         <div class="panel-footer">
-            <a href="https://cloud.tencent.com/developer/article/2042123" class="panel-footer-btn" target="_blank">【进行中】【TDP加码福利】COS用户实践征文月，等你来投稿！！！</a>
+            <a href="https://cloud.tencent.com/developer/article/2064728" class="panel-footer-btn" target="_blank">【进行中】【TDP加码福利】COS用户实践征文月，等你来投稿！！！</a>
         </div>
         <div class="panel-footer">
             <a href="https://cloud.tencent.com/developer/article/2043794" class="panel-footer-btn" target="_blank">【已结束】DNS解析保姆级攻略【开箱吧腾讯云】有奖互动等你来！</a>
@@ -74,6 +102,7 @@
             <a href="/top.php" class="panel-footer-btn" target="_blank">【已结束】腾讯云智能客服智囊团活动·第一期</a>
         </div>
     </div>
+    -->
     <div id="aplayer"></div>
     <footer class="footer">
         <a href="http://beian.miit.gov.cn" target="_blank">粤ICP备17128882号</a>
