--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
             <p>却发现，原来海焦上的我</p>
             <p>期待的泪水不能咸到深海中的你</p>
             <p>就像我的 git，等来的却是你的 <code>rm -rf /TDP</code></p>
+            
+            <p>恍然间，做了一个很长很长的梦……</p>
+            <p>我梦见，TDP发布了老友召回</p>
+            <p>我梦见，一个个熟悉的昵称和头像</p>
+            <p>我梦见，TDP又恢复了它往日的荣光！</p>
+
+            <p>轰，一声惊雷把我拽回了现实</p>
+            <p>梦醒了，那真的是梦嘛？</p>
+            <p>它一定会回来的，对嘛？</p>
 　　    </div>
     </div>
     <!--
